Fix playlist thumb overflow issue for wide aspect ratios

--- a/src/style-guide.less
+++ b/src/style-guide.less
@@ -2350,6 +2350,7 @@ md-menu-item{
         }
 
         &__image{
+          overflow: hidden;
           background-color: @col_gray_8;
           display:flex;
           flex-shrink:0;
